--- a/jsTest/demo2.html
+++ b/jsTest/demo2.html
@@ -2,75 +2,145 @@
 <html lang="en">
 <head>
     <meta http-equiv="Content-Type" content="text/html" charset="UTF-8">
-    <link rel="stylesheet" type="text/css"></head>
-    <script>
+    <link rel="stylesheet" type="text/css">
+</head>
+<script>
 
-        window.onload = function () {
-            var a = document.getElementById('bj');
-            var btn1 = document.getElementById('btn01');
-            btn1.onclick = function () {
-                alert(a.innerText)
-            };
+    window.onload = function () {
+        var btn1 = document.getElementById('btn01');
+        var btn2 = document.getElementById('btn02');
+        var btn3 = document.getElementById('btn03');
+        var btn4 = document.getElementById('btn04');
+        var btn5 = document.getElementById('btn05');
+        var btn6 = document.getElementById('btn06');
+
+        btn6.onclick = function(){
+            var phone = document.getElementById('phone');
+            console.log(phone.innerText);
+            var res = phone.getElementsByTagName('li');
+            for (let i = 0; i < res.length ; i++) {
+                alert(res[i].innerText);
+            }
         };
 
 
-    </script>
 
-    <title>查询</title>
+        btn5.onclick = function () {
+            var city =document.getElementById('city');
+            console.log(city.children.length)
+            for (let i = 0; i < city.children.length; i++) {
+                alert(city.children[i].innerHTML)
+            }
+        };
+
+
+        btn4.onclick = function () {
+            // document 的查询范围在整个页面中
+            var city = document.getElementById('city');
+            console.log(city.children.length);
+            var a = city.getElementsByTagName('li');
+            for (var i = 0; i < a.length; i++) {
+                alert(a[i].nodeValue);
+            }
+        };
+
+        btn1.onclick = function () {
+            var a = document.getElementById('bj');
+            alert(a.innerText)
+        };
+        btn2.onclick = function () {
+            var res = document.getElementsByTagName('li');
+            for (var i = 0; i < res.length; i++) {
+                alert(res[i].innerText);
+            }
+        };
+        btn3.onclick = function () {
+            var res = document.getElementsByName('gender');
+            for (var i = 0; i < res.length; i++) {
+                alert(res[i].value);
+            }
+        };
+    };
+
+</script>
+
+<title>查询</title>
 </head>
 <body>
-    <div class="inner">
-        <p>你最喜欢哪个城市？</p>
-        <ul id="city">
-            <li id="bj">北京</li>
-            <li>上海</li>
-            <li>广州</li>
-            <li>深圳</li>
-        </ul>
-        <br>
-        <br>
-        <p>你最喜欢哪款游戏</p>
-        <ul id="game">
-            <li>红警</li>
-            <li>魔兽争霸</li>
-            <li>英雄联盟</li>
-            <li>堡垒之夜</li>
-        </ul>
-        <br>
-        <br>
-        <p>
-            你的操作系统是什么？
-        </p>
-        <ul id="phone">
-            <li>mac</li>
-            <li>windows</li>
-            <li>Linux</li>
-        </ul>
+<div class="inner">
+    <p>你最喜欢哪个城市？</p>
+    <ul id="city">
+        <li id="bj">北京</li>
+        <li>上海</li>
+        <li>广州</li>
+        <li>深圳</li>
+    </ul>
+    <br>
+    <br>
+    <p>你最喜欢哪款游戏</p>
+    <ul id="game">
+        <li>红警</li>
+        <li>魔兽争霸</li>
+        <li>英雄联盟</li>
+        <li>堡垒之夜</li>
+    </ul>
+    <br>
+    <br>
+    <p>
+        你的操作系统是什么？
+    </p>
+    <ul id="phone">
+        <li>mac</li>
+        <li>windows</li>
+        <li>Linux</li>
+    </ul>
+</div>
+<div class="inner">
+    gender:
+    <input type="radio" name="gender" value="male"/>
+    male
+    <input type="radio" name="gender" value="female"/>
+    female
+    name:
+    <input type="text" name="name" id="username" value=""/>
+</div>
+<br>
+<br>
+<div id="btnList">
+    <div>
+        <button class="ello" id="btn01">查找#bj节点</button>
     </div>
-    <div class="inner">
-        gender:
-        <input type="radio" name="gender" value="male"/>
-        male
-        <input type="radio" name="gender" value="female"/>
-        female
-        name:
-        <input type="text" name="name" id="username" value=""/>
+    <div>
+        <button id="btn02">查找li节点</button>
     </div>
-        <br>
-        <br>
-    <div id="btnList">
-        <div><button id="btn01">查找#bj节点</button></div>
-        <div><button id="btn02">查找li节点</button></div>
-        <div><button id="btn03">查找所有name=gender节点</button></div>
-        <div><button id="btn04">查找所有city下的li节点</button></div>
-        <div><button id="btn05">查找所有city下的子节点</button></div>
-        <div><button id="btn06">查找phone的第一个子节点</button></div>
-        <div><button id="btn07">查找bg的父节点</button></div>
-        <div><button id="btn08">查找mac的第一个兄弟节点</button></div>
-        <div><button id="btn09">返回username的value值</button></div>
-        <div><button id="btn10">设置username的value值</button></div>
-        <div><button id="btn11">返回bg的文本值</button></div>
+    <div>
+        <button id="btn03">查找所有name=gender节点</button>
     </div>
+    <div>
+        <button id="btn04">查找所有city下的li节点</button>
+    </div>
+    <div>
+        <button id="btn05">查找所有city下的子节点</button>
+    </div>
+    <div>
+        <button id="btn06">查找phone的第一个子节点</button>
+    </div>
+    <div>
+        <button id="btn07">查找bg的父节点</button>
+    </div>
+    <div>
+        <button id="btn08">查找mac的第一个兄弟节点</button>
+    </div>
+    <div>
+        <button id="btn09">返回username的value值</button>
+    </div>
+    <div>
+        <button id="btn10">设置username的value值</button>
+    </div>
+    <div>
+        <button id="btn11">返回bg的文本值</button>
+    </div>
+</div>
 
 
 </body>
